--- a/.github/workflows/release-to-devel.yaml
+++ b/.github/workflows/release-to-devel.yaml
@@ -199,25 +199,25 @@ jobs:
                 if: success()
                 uses: rtCamp/action-slack-notify@v2
                 env:
-                    SLACK_CHANNEL: release
+                    SLACK_CHANNEL: release-devel
                     SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
                     #SLACK_ICON: https://github.com/rtCamp.png?size=48
                     SLACK_MESSAGE: ':rocket: Release successful :white_check_mark:'
                     SLACK_TITLE: Image Api - Release to devel
                     SLACK_USERNAME: Github Action
-                    SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_WEBHOOK }}
+                    SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_DEVEL_WEBHOOK }}
 
             -   name: Slack Notification - fail
                 if: failure()
                 uses: rtCamp/action-slack-notify@v2
                 env:
-                    SLACK_CHANNEL: release
+                    SLACK_CHANNEL: release-devel
                     SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
                     #SLACK_ICON: https://github.com/rtCamp.png?size=48
                     SLACK_MESSAGE: ':rocket: Release failed :boom:'
                     SLACK_TITLE: Image Api - Release to devel
                     SLACK_USERNAME: Github Action
-                    SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_WEBHOOK }}
+                    SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_DEVEL_WEBHOOK }}
 
     selenium-tests:
         runs-on: ubuntu-latest
@@ -288,22 +288,22 @@ jobs:
                 if: success()
                 uses: rtCamp/action-slack-notify@v2
                 env:
-                    SLACK_CHANNEL: release
+                    SLACK_CHANNEL: release-devel
                     SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
                     #SLACK_ICON: https://github.com/rtCamp.png?size=48
                     SLACK_MESSAGE: 'Selenium tests are successful :white_check_mark:'
                     SLACK_TITLE: Image Api - Selenium tests on devel
                     SLACK_USERNAME: Github Action
-                    SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_WEBHOOK }}
+                    SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_DEVEL_WEBHOOK }}
 
             -   name: Slack Notification - fail
                 if: failure()
                 uses: rtCamp/action-slack-notify@v2
                 env:
-                    SLACK_CHANNEL: release
+                    SLACK_CHANNEL: release-devel
                     SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
                     #SLACK_ICON: https://github.com/rtCamp.png?size=48
                     SLACK_MESSAGE: 'Selenium tests have failed :boom:'
                     SLACK_TITLE: Image Api - Selenium tests on devel
                     SLACK_USERNAME: Github Action
-                    SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_WEBHOOK }}
+                    SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_DEVEL_WEBHOOK }}
